<resources>
    <string name="app_name">Lyfjabox</string>
    <string name="img_desc">Lyfjabox logo</string>

    <!-- Strings for RegisterActivity and WelcomeActivity -->
    <string name="fillIn">Fill in the form to sign up</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="confirm_registry">Email not found. You want to create a new user with that email and password?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="updatingReport">Updating.....</string>
    <string name="overview_text">Here you can view and edit all of your registered medication</string>

    <!-- Strings for WelcomeActivity -->
    <string name="greeting_home">Welcome %1$s! </string>

    <!-- Strings for HomeActivity -->
    <string name="find_med">"Find medicine"</string>
    <string name="find_pharmacies">Find pharmacies</string>
    <string name="user_info">User information</string>
    <string name="reg_med">Registered medicine</string>
    <string name="sign_out">Sign me out</string>

    <!-- Strings for UserActivity -->
    <string name="user_greeting">%1$s!</string>
    <string name="update_button">Update</string>
    <string name="update_successful_toast">You successfully updated your user information!</string>
    <string name="edit_user_info">Edit your user information</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="ssn">SSN</string>
    <string name="address">Address</string>
    <string name="zip">Zip</string>
    <string name="phonenr">Phone number</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat">Repeat password</string>
    <string name="cancel">Cancel</string>
    <string name="signup">Sign up</string>
    <string name="username">Username</string>

    <!-- Strings for MedicineInfoActivity -->
    <string-array name="reminder_on_off">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string-array name="drug_frequency">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="time_hours">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
    </string-array>

    <string-array name="time_minutes">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
    </string-array>

    <string-array name="zip_list">
        <item>101 Reykjavík</item>
        <item>103 Reykjavík</item>
        <item>104 Reykjavík</item>
        <item>105 Reykjavík</item>
        <item>107 Reykjavík</item>
        <item>108 Reykjavík</item>
        <item>109 Reykjavík</item>
        <item>110 Reykjavík</item>
        <item>111 Reykjavík</item>
        <item>112 Reykjavík</item>
        <item>113 Reykjavík</item>
        <item>116 Reykjavík</item>
        <item>200 Kópavogur</item>
        <item>201 Kópavogur</item>
        <item>202 Kópavogur</item>
        <item>203 Kópavogur</item>
        <item>210 Garðabær</item>
        <item>225 Garðabær</item>
        <item>220 Hafnarfjörður</item>
        <item>221 Hafnarfjörður</item>
        <item>270 Mosfellsbær</item>
        <item>271 Mosfellsbær</item>
        <item>276 Mosfellsbær</item>
        <item>170 Seltjarnarnes</item>
        <item>230 Keflavík</item>
        <item>232 Keflavík</item>
        <item>233 Hafnir</item>
        <item>235 Keflavíkurflugvöllur</item>
        <item>240 Grindavík</item>
        <item>245 Sandgerði</item>
        <item>250 Garður</item>
        <item>260 Njarðvík</item>
        <item>190 Vogar</item>
        <item>300 Akranes</item>
        <item>301 Akranes</item>
        <item>310 Borgarnes</item>
        <item>311 Borgarnes</item>
        <item>320 Reykholt</item>
        <item>340 Stykkishólmur</item>
        <item>345 Flatey</item>
        <item>350 Grundarfjörður</item>
        <item>355 Ólafsvík</item>
        <item>356 Snæfellsbær</item>
        <item>360 Hellissandur</item>
        <item>370 Búðardalur</item>
        <item>371 Búðardalur</item>
        <item>380 Reykhólahreppur</item>
        <item>400 Ísafjörður</item>
        <item>401 Ísafjörður</item>
        <item>415 Bolungarvík</item>
        <item>420 Súðavík</item>
        <item>425 Flateyri</item>
        <item>430 Suðureyri</item>
        <item>450 Patreksfjörður</item>
        <item>451 Patreksfjörður</item>
        <item>460 Tálknafjörður</item>
        <item>465 Bíldudalur</item>
        <item>470 Þingeyri</item>
        <item>471 Þingeyri</item>
        <item>500 Staður</item>
        <item>510 Hólmavík</item>
        <item>520 Drangsnes</item>
        <item>524 Árneshreppur</item>
        <item>530 Hvammstangi</item>
        <item>531 Hvammstangi</item>
        <item>540 Blönduós</item>
        <item>541 Blönduós</item>
        <item>545 Skagaströnd</item>
        <item>550 Sauðárkrókur</item>
        <item>551 Sauðárkrókur</item>
        <item>560 Varmahlíð</item>
        <item>565 Hofsós</item>
        <item>566 Hofsós</item>
        <item>570 Fljót</item>
        <item>580 Siglufjörður</item>
        <item>600 Akureyri</item>
        <item>601 Akureyri</item>
        <item>603 Akureyri</item>
        <item>610 Grenivík</item>
        <item>611 Grímsey</item>
        <item>620 Dalvík</item>
        <item>621 Dalvík</item>
        <item>625 Ólafsfjörður</item>
        <item>630 Hrísey</item>
        <item>640 Húsavík</item>
        <item>641 Húsavík</item>
        <item>650 Laugar</item>
        <item>660 Mývatn</item>
        <item>670 Kópasker</item>
        <item>671 Kópasker</item>
        <item>675 Raufarhöfn</item>
        <item>680 Þórshöfn</item>
        <item>681 Þórshöfn</item>
        <item>685 Bakkafjörður</item>
        <item>690 Vopnafjörður</item>
        <item>700 Egilsstaðir</item>
        <item>701 Egilsstaðir</item>
        <item>710 Seyðisfjörður</item>
        <item>715 Mjóifjörður</item>
        <item>720 Borgarfjörður Eystri</item>
        <item>730 Reyðarfjörður</item>
        <item>735 Eskifjörður</item>
        <item>740 Neskaupsstaður</item>
        <item>750 Fáskrúðsfjörður</item>
        <item>755 Stöðvarfjörður</item>
        <item>760 Breiðdalsvík</item>
        <item>765 Djúpivogur</item>
        <item>780 Höfn</item>
        <item>781 Höfn</item>
        <item>785 Öræfi</item>
        <item>800 Selfoss</item>
        <item>801 Selfoss</item>
        <item>810 Hveragerði</item>
        <item>815 Þorlákshöfn</item>
        <item>816 Ölfus</item>
        <item>820 Eyrarbakki</item>
        <item>825 Stokkseyri</item>
        <item>840 Laugarvatn</item>
        <item>845 Flúðir</item>
        <item>850 Hella</item>
        <item>851 Hella</item>
        <item>860 Hvolsvöllur</item>
        <item>861 Hvolsvöllur</item>
        <item>870 Vík</item>
        <item>871 Vík</item>
        <item>880 Kirkjubæjarklaustur</item>
        <item>900 Vestmannaeyjar</item>
    </string-array>
    <string name="title_activity_map">Map</string>
    <string name="menu_title_search">Search</string>



</resources>
