<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_home"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView android:contentDescription="@string/img_desc"
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_logo2" />

        <TableLayout
            android:id="@+id/greeting_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView">

            <TableRow>

                <TextView
                    android:id="@+id/greeting_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/greeting_home"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            </TableRow>

        </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/greeting_top"
            android:layout_marginTop="10dp">

            <TableRow>

                <Button
                    android:id="@+id/search_meds_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/find_med" />

                <Button
                    android:id="@+id/search_pharmacy_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/find_pharmacies" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/user_information_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/user_info" />

                <Button
                    android:id="@+id/registered_meds_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/reg_med" />
            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/log_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sign_out" />
</LinearLayout>
