<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">
        <ImageView android:contentDescription="@string/img_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_logo2" />
        <TableRow>
            <TextView
                android:id="@+id/user_greeting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/user_greeting"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/edit_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_user_info"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        </TableRow>


        <TableRow>
            <TextView
                android:text="@string/first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@id/first_name_label"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/first_name"
                android:ems="10"
                android:id="@+id/first_name_edit"
                android:layout_weight="1"
                tools:context="com.example.eirikuratli.lyfjabox.models.User.getFirstname()"/>

        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@id/last_name_label"
                android:layout_weight="0.14"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/last_name"
                android:ems="10"
                android:id="@+id/last_name_edit"
                android:layout_weight="0.14"/>
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/ssn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@id/ssn_label"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/ssn_edit"
                android:layout_weight="1"
                android:hint="@string/ssn"/>
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@id/address_label"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress"
                android:hint="@string/address"
                android:ems="10"
                android:id="@+id/address_edit"
                android:layout_weight="1"/>
        </TableRow>


        <TableRow>
            <TextView
                android:text="@string/zip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@id/postal_label"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:id="@+id/zip_edit"
                android:drawSelectorOnTop="true"
                android:entries="@array/zip_list"
                android:layout_weight="1"
                />

        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/phonenr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@id/phone_label"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="7"
                android:id="@+id/phone_edit"
                android:layout_weight="1"
                android:hint="@string/phonenr"/>
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@id/email_label"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/email_edit"
                android:layout_weight="1"
                android:hint="@string/email"/>
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@id/password_label"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/password_edit"
                android:layout_weight="1"
                android:hint="@string/password"/>
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/repeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@id/password_label"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/password_repeat_edit"
                android:layout_weight="1"
                android:hint="@string/repeat"/>
        </TableRow>

        <TableRow android:paddingTop="20dp">

            <Button
                android:id="@+id/cancel_update_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/update_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/update_button" />

        </TableRow>

    </TableLayout>

</ScrollView>

